crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__assumed-size-character-intent_C072.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C072 character 'autochar_glob' has assumed size but does not have `intent(in)`
 --> ./resources/test/fixtures/correctness/C072.f90:3:14
  |
1 | program cases
2 |   ! A char array outside a function or subroutine, no exception
3 |   character (*) :: autochar_glob
  |              ^     -------------
4 | contains
5 |   subroutine char_input(autochar_in, autochar_inout, autochar_out, fixedchar)
  |

C072 character 'autochar_inout' has assumed size but does not have `intent(in)`
  --> ./resources/test/fixtures/correctness/C072.f90:9:15
   |
 7 |     character(*), intent(in)       :: autochar_in
 8 |     ! A char array with disallowed intent, exception
 9 |     character(*), intent(inout)    :: autochar_inout
   |               ^                       --------------
10 |     ! A char array with disallowed intent, exception
11 |     character(len=*), intent(out)  :: autochar_out
   |

C072 character 'autochar_out' has assumed size but does not have `intent(in)`
  --> ./resources/test/fixtures/correctness/C072.f90:11:19
   |
 9 |     character(*), intent(inout)    :: autochar_inout
10 |     ! A char array with disallowed intent, exception
11 |     character(len=*), intent(out)  :: autochar_out
   |                   ^                   ------------
12 |     ! A char array not passed as a parameter, no exception
13 |     character(*)                   :: autochar_var
   |

C072 character 'autochar_var' has assumed size but does not have `intent(in)`
  --> ./resources/test/fixtures/correctness/C072.f90:13:15
   |
11 |     character(len=*), intent(out)  :: autochar_out
12 |     ! A char array not passed as a parameter, no exception
13 |     character(*)                   :: autochar_var
   |               ^                       ------------
14 |     ! A char array with fixed length, no exception
15 |     character(len=10), intent(out) :: fixedchar
   |
