crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__default-public-accessibility_C132.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
---
./resources/test/fixtures/correctness/C132.f90:10:3: C132 module 'bad_module' has default `public` accessibility
   |
 8 | module bad_module
 9 |   ! This is bad
10 |   public
   |   ------ C132
11 | end module bad_module
   |
