crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__exit-or-cycle-in-unlabelled-loop_C142.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C142 'cycle' statement in unlabelled 'do' loop
  --> ./resources/test/fixtures/correctness/C142.f90:27:7
   |
24 |   label5: do i = 1, 2
25 |     ! should warn
26 |     do j = 1, 2
   |     ----------- Unlabelled loop referenced by...
27 |       cycle
   |       ^^^^^ ...control flow statement here
28 |     end do
29 |   end do label5
   |

C142 'exit' statement in unlabelled 'do' loop
  --> ./resources/test/fixtures/correctness/C142.f90:50:5
   |
46 |   end do label8
47 |
48 |   do
   |   -- Unlabelled loop referenced by...
49 |     ! should warn, except if `nested-loops-only` is true
50 |     exit
   |     ^^^^ ...control flow statement here
51 |   end do
   |

C142 'exit' statement in unlabelled 'do' loop
  --> ./resources/test/fixtures/correctness/C142.f90:56:7
   |
53 |   do
54 |     do
   |     -- Unlabelled loop referenced by...
55 |       ! should warn
56 |       exit
   |       ^^^^ ...control flow statement here
57 |     end do
58 |   end do
   |
