crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__implicit-external-procedures_C003.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C003 [*] 'implicit none' missing 'external'
 --> ./resources/test/fixtures/correctness/C003.f90:2:3
  |
1 | module a
2 |   implicit none
  |   ^^^^^^^^^^^^^
3 | end module a
  |
help: Add `(external)` to 'implicit none'
1 | module a
  -   implicit none
2 +   implicit none (type, external)
3 | end module a
4 |
5 | module b
note: This is an unsafe fix and may change runtime behavior

C003 [*] 'implicit none' missing 'external'
 --> ./resources/test/fixtures/correctness/C003.f90:6:3
  |
5 | module b
6 |   implicit none (type)
  |   ^^^^^^^^^^^^^^^^^^^^
7 | end module b
  |
help: Add `(external)` to 'implicit none'
3 | end module a
4 |
5 | module b
  -   implicit none (type)
6 +   implicit none (type, external)
7 | end module b
8 |
9 | module c
note: This is an unsafe fix and may change runtime behavior
