crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__implicit-real-kind_C022.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C022 real has implicit kind
 --> ./resources/test/fixtures/correctness/C022.f90:1:1
  |
1 | real function my_func(a, b, c, d, e)       ! catch
  | ^^^^
2 |   real, intent(in) :: a                    ! catch
3 |   real(4), intent(in) :: b                 ! ignore
  |

C022 real has implicit kind
 --> ./resources/test/fixtures/correctness/C022.f90:2:3
  |
1 | real function my_func(a, b, c, d, e)       ! catch
2 |   real, intent(in) :: a                    ! catch
  |   ^^^^
3 |   real(4), intent(in) :: b                 ! ignore
4 |   integer, intent(in) :: c                 ! ignore
  |

C022 complex has implicit kind
 --> ./resources/test/fixtures/correctness/C022.f90:5:3
  |
3 |   real(4), intent(in) :: b                 ! ignore
4 |   integer, intent(in) :: c                 ! ignore
5 |   complex, intent(in) :: d                 ! catch
  |   ^^^^^^^
6 |   complex(8), intent(in) :: e              ! ignore
7 |   type(real(kind=kind(1.0d0))) :: bar      ! ignore
  |
