crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__interface-implicit-typing_C002.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C002 [*] interface 'function' uses implicit typing
 --> ./resources/test/fixtures/correctness/C002.f90:4:5
  |
2 |   implicit none
3 |   interface
4 |     integer function myfunc(x)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |       integer, intent(in) :: x
6 |     end function myfunc
  |
help: Insert `implicit none`
2 |   implicit none
3 |   interface
4 |     integer function myfunc(x)
5 +       implicit none
6 |       integer, intent(in) :: x
7 |     end function myfunc
8 |
note: This is an unsafe fix and may change runtime behavior

C002 [*] interface 'subroutine' uses implicit typing
  --> ./resources/test/fixtures/correctness/C002.f90:8:5
   |
 6 |     end function myfunc
 7 |
 8 |     subroutine mysub(x)
   |     ^^^^^^^^^^^^^^^^^^^
 9 |       implicit none (external)
10 |       integer, intent(in) :: x
   |
help: Change to `implicit none (type, external)`
6  |     end function myfunc
7  |
8  |     subroutine mysub(x)
   -       implicit none (external)
9  +       implicit none (type, external)
10 |       integer, intent(in) :: x
11 |     end subroutine mysub
12 |   end interface
note: This is an unsafe fix and may change runtime behavior

C002 [*] interface 'function' uses implicit typing
  --> ./resources/test/fixtures/correctness/C002.f90:18:5
   |
16 |   implicit none
17 |   interface
18 |     real function myfunc2(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
19 |       implicit real (a,z)
20 |     end function myfunc2
   |
help: Change to `implicit none`
16 |   implicit none
17 |   interface
18 |     real function myfunc2(x)
   -       implicit real (a,z)
19 +       implicit none
20 |     end function myfunc2
21 |
22 |     subroutine mysub2(x)
note: This is an unsafe fix and may change runtime behavior

C002 [*] interface 'subroutine' uses implicit typing
  --> ./resources/test/fixtures/correctness/C002.f90:22:5
   |
20 |     end function myfunc2
21 |
22 |     subroutine mysub2(x)
   |     ^^^^^^^^^^^^^^^^^^^^
23 |       integer, intent(inout) :: x
24 |     end subroutine mysub2
   |
help: Insert `implicit none`
20 |     end function myfunc2
21 |
22 |     subroutine mysub2(x)
23 +       implicit none
24 |       integer, intent(inout) :: x
25 |     end subroutine mysub2
26 |   end interface
note: This is an unsafe fix and may change runtime behavior

C002 [*] interface 'subroutine' uses implicit typing
  --> ./resources/test/fixtures/correctness/C002.f90:33:6
   |
31 |   implicit none (type, external)
32 |   interface
33 |      subroutine sub
   |      ^^^^^^^^^^^^^^
34 |        import :: wp
35 |      end subroutine sub
   |
help: Insert `implicit none`
32 |   interface
33 |      subroutine sub
34 |        import :: wp
35 +        implicit none
36 |      end subroutine sub
37 |   end interface
38 | end module interface_with_import
note: This is an unsafe fix and may change runtime behavior
