crates/fortitude_linter/src/rules/correctness/snapshots/fortitude_linter__rules__correctness__tests__magic-io-unit_C032.f90.snap
---
source: crates/fortitude_linter/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
C032 Magic unit '10' in IO statement
 --> ./resources/test/fixtures/correctness/C032.f90:4:8
  |
2 |   implicit none
3 |   integer :: i, named_unit
4 |   open(10, file="test.txt", action="read")
  |        ^^
5 |   read(10, *) i
6 |   close(10)
  |
help: Replace with named variable

C032 Magic unit '10' in IO statement
 --> ./resources/test/fixtures/correctness/C032.f90:5:8
  |
3 |   integer :: i, named_unit
4 |   open(10, file="test.txt", action="read")
5 |   read(10, *) i
  |        ^^
6 |   close(10)
  |
help: Replace with named variable

C032 Magic unit '10' in IO statement
 --> ./resources/test/fixtures/correctness/C032.f90:6:9
  |
4 |   open(10, file="test.txt", action="read")
5 |   read(10, *) i
6 |   close(10)
  |         ^^
7 |
8 |   open(file="test_out.txt", action="write", unit=24)
  |
help: Replace with named variable

C032 Magic unit '24' in IO statement
  --> ./resources/test/fixtures/correctness/C032.f90:8:50
   |
 6 |   close(10)
 7 |
 8 |   open(file="test_out.txt", action="write", unit=24)
   |                                                  ^^
 9 |   write (fmt=*, unit=24) i
10 |   close(24)
   |
help: Replace with named variable

C032 Magic unit '24' in IO statement
  --> ./resources/test/fixtures/correctness/C032.f90:9:22
   |
 8 |   open(file="test_out.txt", action="write", unit=24)
 9 |   write (fmt=*, unit=24) i
   |                      ^^
10 |   close(24)
   |
help: Replace with named variable

C032 Magic unit '24' in IO statement
  --> ./resources/test/fixtures/correctness/C032.f90:10:9
   |
 8 |   open(file="test_out.txt", action="write", unit=24)
 9 |   write (fmt=*, unit=24) i
10 |   close(24)
   |         ^^
11 |
12 |   open(newunit=named_unit, file="test.txt", action="write")
   |
help: Replace with named variable
